// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbbreviationLookup Utils highlightOptionLabel Should ignore space at the beginning and the end 1`] = `"SHORTABBR (Very long test name)"`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should mark abbreviation because it shorter (bigger similarity) 1`] = `
Object {
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Array [
      "",
      Object {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": Object {},
        "key": null,
        "props": Object {
          "children": "SHORT",
        },
        "type": "mark",
      },
      "ABBR (ShortNameForTemplate)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should mark name because substring at the beginning 1`] = `
Object {
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Array [
      "ASHORTABBR (",
      Object {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": Object {},
        "key": null,
        "props": Object {
          "children": "Short",
        },
        "type": "mark",
      },
      "NameForTemplate)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should not highlight if lookup value length is short 1`] = `"SHORTABBR (Very long test name)"`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should return marked abbreviation 1`] = `
Object {
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Array [
      "SHORT",
      Object {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": Object {},
        "key": null,
        "props": Object {
          "children": "ABBR",
        },
        "type": "mark",
      },
      " (Very long test name)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;

exports[`AbbreviationLookup Utils highlightOptionLabel Should return marked name 1`] = `
Object {
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "children": Array [
      "SHORTABBR (Very ",
      Object {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": Object {},
        "key": null,
        "props": Object {
          "children": "long",
        },
        "type": "mark",
      },
      " test name)",
    ],
  },
  "type": Symbol(react.fragment),
}
`;
